logs/errorLogs.log
2019-08-03T10:26:52.389Z => error => uncaughtException: missing ) after argument list
C:\Users\Rufet\Desktop\Developer\Angular Projects\online-shop-backend\controllers\signup.js:47
            return res.status(20    0).json({ error: 0, body: "Successfully created." });
                              ^^

SyntaxError: missing ) after argument list
    at new Script (vm.js:79:7)
    at createScript (vm.js:251:10)
    at Object.runInThisContext (vm.js:303:10)
    at Module._compile (internal/modules/cjs/loader.js:657:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:700:10)
    at Module.load (internal/modules/cjs/loader.js:599:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:538:12)
    at Function.Module._load (internal/modules/cjs/loader.js:530:3)
    at Module.require (internal/modules/cjs/loader.js:637:17)
    at require (internal/modules/cjs/helpers.js:22:18)
    at Object.<anonymous> (C:\Users\Rufet\Desktop\Developer\Angular Projects\online-shop-backend\routes\routes.js:4:26)
    at Module._compile (internal/modules/cjs/loader.js:689:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:700:10)
    at Module.load (internal/modules/cjs/loader.js:599:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:538:12)
    at Function.Module._load (internal/modules/cjs/loader.js:530:3)
2019-08-03T10:41:37.721Z => error => "email" must be a valid email
2019-08-03T10:41:47.020Z => error => "email" must be a valid email
2019-08-03T10:49:19.911Z => error => ReferenceError: result is not defined
2019-08-03T14:14:39.339Z => error => Error [ERR_HTTP_HEADERS_SENT]: Cannot set headers after they are sent to the client
2019-08-03T14:15:03.716Z => error => Error [ERR_HTTP_HEADERS_SENT]: Cannot set headers after they are sent to the client
2019-08-03T14:15:10.347Z => error => Error [ERR_HTTP_HEADERS_SENT]: Cannot set headers after they are sent to the client
2019-08-03T14:20:35.237Z => error => Error [ERR_HTTP_HEADERS_SENT]: Cannot set headers after they are sent to the client
